; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_core.c_usb_gadget_state_work.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_core.c_usb_gadget_state_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }
%struct.usb_gadget = type { %struct.usb_udc* }
%struct.usb_udc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"state\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.work_struct*)* @usb_gadget_state_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usb_gadget_state_work(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  %3 = alloca %struct.usb_gadget*, align 8
  %4 = alloca %struct.usb_udc*, align 8
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  %5 = load %struct.work_struct*, %struct.work_struct** %2, align 8
  %6 = call %struct.usb_gadget* @work_to_gadget(%struct.work_struct* %5)
  store %struct.usb_gadget* %6, %struct.usb_gadget** %3, align 8
  %7 = load %struct.usb_gadget*, %struct.usb_gadget** %3, align 8
  %8 = getelementptr inbounds %struct.usb_gadget, %struct.usb_gadget* %7, i32 0, i32 0
  %9 = load %struct.usb_udc*, %struct.usb_udc** %8, align 8
  store %struct.usb_udc* %9, %struct.usb_udc** %4, align 8
  %10 = load %struct.usb_udc*, %struct.usb_udc** %4, align 8
  %11 = icmp ne %struct.usb_udc* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.usb_udc*, %struct.usb_udc** %4, align 8
  %14 = getelementptr inbounds %struct.usb_udc, %struct.usb_udc* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @sysfs_notify(i32* %15, i32* null, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  br label %17

17:                                               ; preds = %12, %1
  ret void
}

declare dso_local %struct.usb_gadget* @work_to_gadget(%struct.work_struct*) #1

declare dso_local i32 @sysfs_notify(i32*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
